# kanade

./: .gitignore  Cargo.toml  DESIGN.md  LOCAL_PLAYBACK.md  PER_NODE_QUEUE.md  README.md  SECURITY_TODO.md  about.hbs  about.toml  deny.toml  docker-compose.node.yml  docker-compose.smb.yml  docker-compose.yml  flake.nix  protocols.md
.github/workflows/: cd.yml  ci.yml  docker.yml  license-check.yml  license.yml
docker/: Dockerfile  Dockerfile.web  mpd.conf  nginx.conf
kanade/: Cargo.toml
kanade-adapter-mpd/: Cargo.toml
kanade-adapter-mpd/src/: client.rs  lib.rs  renderer.rs  state_sync.rs
kanade-adapter-node-server/: Cargo.toml
kanade-adapter-node-server/src/: lib.rs  output.rs  server.rs
kanade-adapter-openhome/: Cargo.toml
kanade-adapter-openhome/src/: broadcaster.rs  lib.rs  server.rs  soap.rs
kanade-adapter-ws/: Cargo.toml
kanade-adapter-ws/src/: broadcaster.rs  command.rs  hls.rs  lib.rs  server.rs
kanade-core/: Cargo.toml
kanade-core/src/: controller.rs  error.rs  lib.rs  model.rs  plugin.rs  ports.rs  state.rs
kanade-db/: Cargo.toml
kanade-db/src/: hash.rs  lib.rs  repo.rs  schema.rs
kanade-node/: Cargo.toml
kanade-node-protocol/: Cargo.toml
kanade-node-protocol/src/: lib.rs
kanade-node/src/: main.rs
kanade-plugin-example-lyrics/: Cargo.toml
kanade-plugin-example-lyrics/src/: lib.rs
kanade-plugin-example-lyrics/wit/: kanade-plugin.wit
kanade-plugin-lastfm/: Cargo.toml
kanade-plugin-lastfm/src/: client.rs  lib.rs
kanade-scanner/: Cargo.toml
kanade-scanner/src/: extractor.rs  lib.rs  walker.rs
kanade-server-http/: Cargo.toml
kanade-server-http/src/: lib.rs  media_server.rs
kanade-swift/: Package.swift  README.md
kanade-swift/Examples/KanadeNativeApp/Sources/: KanadeNativeApp.swift
kanade-swift/Sources/KanadeSwift/: KanadeClient.swift  Models.swift  Protocol.swift
kanade-swift/Tests/KanadeSwiftTests/: KanadeSwiftTests.swift
kanade-tui/: Cargo.toml
kanade-tui/src/: app.rs  lib.rs  main.rs  ws.rs
kanade-tui/src/ui/: mod.rs  now_playing.rs
kanade-wasm-runtime/: Cargo.toml
kanade-wasm-runtime/src/: bindings.rs  host.rs  lib.rs
kanade-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
kanade-web/src/: app.css  main.ts
kanade-web/src/components/: App.svelte  Library.svelte  NodePicker.svelte  NowPlaying.svelte  Queue.svelte  Search.svelte  Settings.svelte  TransportBar.svelte
kanade-web/src/lib/: audio-player.ts  browser-node.svelte.ts  browser-node.ts  format.ts  hls-player.ts  local-playback.ts  media-auth.ts  stores.svelte.ts  stores.ts  types.ts  ws.svelte.ts  ws.ts
kanade-web/static/: manifest.json
kanade/src/: main.rs  media_server.rs  persist.rs
