[workspace]
members = [
    "kanade-core",
    "kanade-db",
    "kanade-scanner",
    "kanade-node-protocol",
    "kanade-adapter-mpd",
    "kanade-adapter-node-server",
    "kanade-adapter-ws",
    "kanade-adapter-openhome",
    "kanade-server-http",
    "kanade-tui",
    "kanade-node",
    "kanade",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
lofty = "0.22"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
