[package]
name = "kanade-adapter-mpd"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
kanade-core = { path = "../kanade-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
