[package]
name = "kanade-adapter-node-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kanade-core = { path = "../kanade-core" }
kanade-node-protocol = { path = "../kanade-node-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
