[package]
name = "kanade-adapter-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
kanade-core = { path = "../kanade-core" }
kanade-db = { path = "../kanade-db" }
kanade-node-protocol = { path = "../kanade-node-protocol" }
kanade-adapter-node-server = { path = "../kanade-adapter-node-server" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
lofty = { workspace = true }
memchr = "2"
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = "0.8"
subtle = "2"
