[package]
name = "kanade-db"
version = "0.1.0"
edition = "2021"

[dependencies]
kanade-core = { path = "../kanade-core" }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
