[package]
name = "kanade-server-http"
version = "0.1.0"
edition = "2021"

[dependencies]
kanade-db = { path = "../kanade-db" }
kanade-core = { path = "../kanade-core" }
tokio = { workspace = true }
tracing = { workspace = true }
lofty = { workspace = true }
memchr = "2"
anyhow = { workspace = true }
