[package]
name = "kanade-tui"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "kanade-tui"
path = "src/main.rs"

[dependencies]
kanade-core = { path = "../kanade-core" }
kanade-adapter-ws = { path = "../kanade-adapter-ws" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
