[package]
name = "kanade-wasm-runtime"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
kanade-core = { path = "../kanade-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasmtime = "43"
wasmtime-wasi = "43"
