[package]
name = "kanade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kanade"
path = "src/main.rs"

[dependencies]
kanade-core = { path = "../kanade-core" }
kanade-db = { path = "../kanade-db" }
kanade-scanner = { path = "../kanade-scanner" }
kanade-adapter-node-server = { path = "../kanade-adapter-node-server" }
kanade-adapter-ws = { path = "../kanade-adapter-ws" }
kanade-adapter-openhome = { path = "../kanade-adapter-openhome" }
kanade-server-http = { path = "../kanade-server-http" }
kanade-plugin-lastfm = { path = "../kanade-plugin-lastfm", optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

[features]
default = ["lastfm"]
lastfm = ["kanade-plugin-lastfm"]
